Adding custom task bean support at runtime for frameworks like spring etc and published to maven 2.0.4